# drise

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
drise/: __init__.py
drise/core/: average_saliency.py  detection.py  explainer.py  masks.py  metrics.py  similarity.py  utils.py  visualization.py
drise/core/wrappers/: base.py  faster_rcnn.py  yolo.py
notebooks/: demo.ipynb
